# fastapi-bootstrap

./: .dockerignore  .editorconfig  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  dockerfile.server  dockerfile.worker  pyproject.toml  run-server.sh  run-worker.sh
migrations/: env.py  utils.py
migrations/versions/: 562a7a8dcc18_init.py
scripts/: makemigration.py  migrate.py  unmigrate.py
server/: config.py  main.py
server/articles/: model.py  routes.py
server/common/: database.py  exceptions.py  fastapi.py  http.py  http_middleware.py  json.py  logging.py  model.py  queue.py  redis.py  task.py
server/profiles/: model.py  routes.py
worker/: main.py
worker/tasks/: processor.py
