[project]
dependencies = [
  "alembic>=1.13.2",
  "arq>=0.26.1",
  "asgi-ratelimit[full]>=0.10.0",
  "asyncache>=0.3.1",
  "asyncpg>=0.29.0",
  "beautifulsoup4>=4.12.3",
  "coloredlogs>=15.0.1",
  "dateparser>=1.2.0",
  "fastapi>=0.114.1",
  "fastapi-pagination>=0.12.27",
  "htmldate>=1.9.0",
  "httpx>=0.27.2",
  "httpx-auth>=0.22.0",
  "langchain>=0.2.16",
  "langchain-community>=0.2.17",
  "langchain-huggingface>=0.0.3",
  "langchain-openai>=0.1.25",
  "redis>=5.0.8",
  "orjson>=3.10.7",
  "pydantic[email]>=2.9.1",
  "pydantic-settings>=2.5.2",
  "python-jose>=3.3.0",
  "sqlalchemy[asyncio]>=2.0.34",
  "trafilatura>=1.12.2",
  "uvicorn>=0.30.6",
  "watchfiles>=0.24.0",
  "langchain-anthropic>=0.1.23",
  "arrow>=1.3.0",
  "pydub>=0.25.1",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.12",
  "python-json-logger>=2.0.7",
]
name = "example"
readme = "README.md"
requires-python = "==3.12.4"
version = "0.1.0"

[tool.uv]
dev-dependencies = [
  "autoflake>=2.3.1",
  "bandit>=1.7.9",
  "factory-boy>=3.3.1",
  "faker>=28.4.1",
  "flake8>=7.1.1",
  "locust>=2.31.5",
  "pytest>=8.3.3",
  "pytest-datadir>=1.5.0",
  "pytest-dotenv>=0.5.2",
  "pytest-mock>=3.14.0",
  "ruff>=0.6.5",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[tool.ruff]
indent-width = 4
line-length = 120
